--- a/index.html
+++ b/index.html
@@ -1,10 +1,33 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Hello Coursera</title>
-  </head>
-  <body>
-    <h1>Hello Coursera! I am Dan</h1>
-  </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Responsive Layout</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Link to the external CSS file -->
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <h1>Our Menu</h1>
+    <div class="container">
+        <section class="section">
+            <div class="section-title">Chicken</div>
+            <div class="section-content">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero.</p>
+            </div>
+        </section>
+        <section class="section">
+            <div class="section-title">Beef</div>
+            <div class="section-content">
+                <p>Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet.</p>
+            </div>
+        </section>
+        <section class="section">
+            <div class="section-title">Sushi</div>
+            <div class="section-content">
+                <p>Duis sagittis ipsum. Praesent mauris. Fusce nec tellus sed augue semper porta.</p>
+            </div>
+        </section>
+    </div>
+</body>
 </html>
