--- a/index.html
+++ b/index.html
@@ -1,61 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Restaurant Menu</title>
-    <link href="https://fonts.googleapis.com/css?family=Oxygen" rel="stylesheet">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+  <meta charset="utf-8">
+  <title>Module 4 Solution Starter</title>
+  <script>
+    var names = []; // DO NOT REMOVE
+  </script>
+  <script src="SpeakHello.js"></script>
+  <script src="SpeakGoodBye.js"></script>
+  <script src="script.js"></script>
 </head>
 <body>
-    <header>
-       <nav class="navbar navbar-expand-lg navbar-light bg-light">
-          <div class="container">
-              <a class="navbar-brand" href="#">Cuisine Delights</a>
-              <button class="navbar-toggler d-md-none" type="button" data-toggle="collapse" data-target="#navbarMenu" aria-controls="navbarMenu" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarMenu">
-                <ul class="navbar-nav mr-auto">
-                  <li class="nav-item text-center d-sm-none">
-                    <a class="nav-link" href="#">Grilled Chicken</a>
-                  </li>
-                  <li class="nav-item text-center d-sm-none">
-                    <a class="nav-link" href="#">Prime Beef</a>
-                  </li>
-                  <li class="nav-item text-center d-sm-none">
-                    <a class="nav-link disabled" href="#">Fresh Sushi</a>
-                  </li>
-                </ul>
-              </div>
-          </div>
-        </nav>
-    </header>
-    <div class="container">
-        <h2 class="text-center">Today's Specials</h2>
-        <section class="col-xs-12">
-            <h3 class="text-center">Grilled Chicken</h3>
-            <p>
-                Experience the tender and flavorful grilled chicken, marinated with a blend of herbs and spices. Each bite offers a burst of savory goodness, perfect for those who crave a satisfying meal. Pair it with our house salad for a balanced dining experience.
-            </p>
-        </section>
-        <section class="col-xs-12">
-            <h3 class="text-center">Prime Beef</h3>
-            <p>
-                Our prime beef selection is cooked to perfection, ensuring a juicy and rich taste that melts in your mouth. Choose from a variety of cuts, each offering a unique flavor profile. This is a must-try for all beef enthusiasts.
-            </p>
-        </section>
-        <section class="col-xs-12">
-            <h3 class="text-center">Fresh Sushi</h3>
-            <p>
-                Enjoy our freshly prepared sushi, crafted with the finest ingredients and traditional techniques. From classic rolls to chef's specials, our sushi offerings provide a delightful combination of taste and texture for all sushi lovers.
-            </p>
-        </section>
-    </div>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
+  <h1>Module 4 Solution Starter</h1>
 </body>
 </html>
